--- a/portal/portalcs.css
+++ b/portal/portalcs.css
@@ -37,8 +37,6 @@ margin-top: -20px;}
 .guia3 {margin-left: 68%;
 margin-top: -19px;
 padding-bottom: 20px;
-
-
 }
 
 .guia4 {margin-left: 80%;
@@ -62,23 +60,40 @@ font-size: 1.5rem;}
 color:black ;}
 
 .textos { text-align: center;
-margin-right: 60%;
+margin-right: 70%;
 }
 
-.divimg {margin-left: 70%;
- margin-top: -32.5%;}
+.textos1{ 
+    text-align: center;
+    margin-right: 70%;}
 
-.h32 {margin-left: 70%;
-    
-margin-top: 1%;
-}
+    .divimg {margin-left: 70%;
+ margin-top: -32%;}
+
+    .divimg1 {margin-left: 70%;
+    margin-top: -33%;}
+
+    .divimg3 {
+        margin-left: -75px;}
+
+    .divimg4 {margin-left: 70%;
+    margin-top: -37.5%;}
+
+    .divimg6 {margin-left: 70%;
+        margin-top: -30%;}
+
+    .divimg8 {margin-left: 70%;
+            margin-top: -35.5%;}
+
+.h32 {margin-left: 70%;  
+margin-top: 1%;}
 
  .textos2 {text-align: center;
-margin-left: 60%;
+margin-left: 70%;
 }
 
 
-.btn1 {margin-left: 15%;
+.btn1 {margin-left: 12%;
 }
 
 .btn2 { margin-left: 80%;
@@ -104,27 +119,53 @@ margin:-8px ;}
     padding: 100px;
     background-image: linear-gradient(to bottom, rgb(0,140,255), rgb(84, 97, 90));}
 
+.nvidia { margin-left: -65px;}
+.celular {margin-right: -4%;}
 
     .musica {margin: -8px;
         margin-top: px;
     background-image: linear-gradient(to bottom, rgb(84, 97, 90), rgb(255, 255, 255)  );
 padding: 60px;}
 
-
- 
-    .divimg4 {margin-left: 70%;
-    margin-top: -36.5%;}
-    .divimg6 {margin-left: 70%;
-        margin-top: -30%;}
-
-        .divimg8 {margin-left: 70%;
-            margin-top: -34.5%;}
+.divmusic { 
+    margin-left: -1%;
+}
+.divimg7 {margin-left: -2%;}
+   
 
 
 
             footer {margin-left: 45%;
             padding-top: 10%;}
 
+
+@media (min-width:1500px  ) {
+
+html { background-color: rgb(255, 255, 255);}
+    .divimg{margin-top: -31%;
+    padding-top: 165px; }
+.divimg1{margin-top: -22%;}
+
+
+
+    .textos2 {margin-top: 1%;
+    }
+
+.placa {margin-top: 30%;}
+
+.game { padding-top: 5%;
+ }
+.Tecnologia{ padding-top: 5%;
+}
+.placa {margin-left: -9%;}
+.divimg6 { padding-top: 7%;}
+.musica{ padding-top: 5%;}
+.divimg8 { padding-top: 9%;
+margin-top: -32%;}
+.divimg4{margin-left: 72%;
+margin-top: -24.5%;}
+
+}
 @media (max-width: 426px ) {
 .topo { padding: 10px;}
 .guia1 {margin-left: -10px;
@@ -146,12 +187,15 @@ margin-top: 10%;}
 
 .divimg6 {margin-left: 1%;
 margin-top: 25%;}
-
+.divimg1 {margin-left: 1%;
+margin-top: 50px;}
 .divimg3 {margin-left: -40%;}
-.divimg4 {padding-top: 30px;
-margin-left: -85px;}
+.divimg4 {padding-top: 100px;
+margin-left: -90px;}
+
+.divimg7{margin-left: -19%;}
 .divimg8 {padding-top: 40%; 
-    margin-left: -1%;}
+    margin-left: -12%;}
 
 .textos {margin-right: 0%;
 text-align: center;}
@@ -170,39 +214,3 @@ text-align: center;
 footer {margin-left: 20%;}
 
 }
-@media (min-width:1400px  ) {
-
-html { background-color: rgb(255, 255, 255);}
-    .divimg{
-    padding-top: 165px; }
-
-
-    .textos2 {margin-top: 1%;}
-
-
-
-.placa {margin-top: 30%;}
-
-
-.game { padding-top: 5%;
- }
-.Tecnologia{ padding-top: 5%;
-}
-.placa {margin-left: -9%;}
-.divimg6 { padding-top: 7%;}
-.musica{ padding-top: 5%;}
-.divimg8 { padding-top: 9%;
-margin-top: -32%;}
-.divimg4{margin-left: 70%;
-margin-top: -23%;}
-
-}
-
-
-
-
-
-
-
-
-
