--- a/tibiatrade/tradetibia.css
+++ b/tibiatrade/tradetibia.css
@@ -140,4 +140,44 @@ color: gold;
 margin-left: -70%;
 display: inline;
 }
+textarea {height: 100px;}
+
 .a1 {margin-top: 20px;}
+ form button {background-color: gold;
+color:rgb(0, 0, 0);
+font-family: 'Shadows Into Light', cursive;
+font-weight: lighter;
+font-size: 20px;
+cursor: pointer;
+}
+form button:hover {
+    background-color: wheat;
+}
+
+input:focus, textarea:focus {
+    outline-color: gold;
+}
+
+footer {color: goldenrod;
+text-align: center;
+padding-top: 10%;
+padding-bottom: 30px;}
+
+
+@media (min-width:1300px) {
+.textvoc {
+margin-left: 15%;
+margin-right: 10%;
+}
+h4 {margin-top:-15%;}
+
+.titulorp {margin-top: -15%;}
+
+.titulodruid{margin-top: -12%;}
+
+
+
+
+
+
+}
