--- a/marque/marque.css
+++ b/marque/marque.css
@@ -32,7 +32,7 @@ font-size: 0.8rem;
     width: 100vw;
     z-index: 100;
 }
-h1{font-size: 1.5rem;
+h1{margin-right: -10%;
 color: rgb(0, 215, 253);}
 
 
